# Copyright (C) 2026 The Dagger Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Description:
#   Defines the Bazel workspace rules for the Dagger examples.

module(name = "dagger_examples")

########################
# Load Dagger repository
########################

bazel_dep(name = "dagger")

# In a real project, this repository would use `archive_override` to link to a
# tagged, released version of the Dagger, but we use `local_repository` so that
# CI testing can test local changes to workspace_defs.bzl. And because dagger root
# directory was not using the new module name, we need to use
# `local_path_override` to point to the parent directory.

DAGGER_TAG = "2.57.2"
# DAGGER_SHA = "6c44dba5d18ac87c9afceea1af1b29b13220a1076c443f519b8f984e667fa1a9"
# archive_override(
#    module_name = "dagger",
#    sha256 = DAGGER_SHA,
#    strip_prefix = "dagger-dagger-%s" % DAGGER_TAG,
#    urls = ["https://github.com/google/dagger/archive/dagger-%s.zip" % DAGGER_TAG],
#)

local_path_override(
    module_name = "dagger",
    path = "../../",
)

ROBOLECTRIC_VERSION = "4.16"

bazel_dep(
    name = "rules_robolectric",
    version = ROBOLECTRIC_VERSION,
)

RULES_JVM_EXTERNAL_TAG = "6.9"

bazel_dep(
    name = "rules_jvm_external",
    version = RULES_JVM_EXTERNAL_TAG,
)

DAGGER_ARTIFACTS = [
    "com.google.dagger:dagger:" + DAGGER_TAG,
    "com.google.dagger:dagger-compiler:" + DAGGER_TAG,
    "com.google.dagger:dagger-producers:" + DAGGER_TAG,
    "com.google.dagger:dagger-spi:" + DAGGER_TAG,
]

DAGGER_REPOSITORIES = [
    "https://maven.google.com",
    "https://repo1.maven.org/maven2",
    "https://central.sonatype.com/repository/maven-snapshots",
]

HILT_ANDROID_ARTIFACTS = [
    "androidx.test:core:1.1.0",  # Export for ApplicationProvider
    "javax.annotation:javax.annotation-api:1.3.2",  # Export for @Generated
    "androidx.annotation:annotation:1.1.0",  # Export for @CallSuper/@Nullable
    "com.google.dagger:dagger:" + DAGGER_TAG,
    "com.google.dagger:dagger-compiler:" + DAGGER_TAG,
    "com.google.dagger:hilt-android:" + DAGGER_TAG,
    "com.google.dagger:hilt-android-testing:" + DAGGER_TAG,
    "com.google.dagger:hilt-android-compiler:" + DAGGER_TAG,
    "com.google.dagger:hilt-core:" + DAGGER_TAG,
]

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = DAGGER_ARTIFACTS + HILT_ANDROID_ARTIFACTS + [
        "androidx.test.ext:junit:1.1.1",
        "androidx.test:runner:1.1.1",
        "com.google.truth:truth:1.0.1",
        "junit:junit:4.13",
        "org.robolectric:robolectric:%s" % ROBOLECTRIC_VERSION,
        "org.robolectric:annotations:%s" % ROBOLECTRIC_VERSION,
    ],
    repositories = DAGGER_REPOSITORIES,
)
maven.artifact(
    testonly = True,
    artifact = "runner",
    group = "androidx.test",
)
maven.artifact(
    testonly = True,
    artifact = "junit",
    group = "androidx.test.ext",
)
maven.artifact(
    testonly = True,
    artifact = "core",
    group = "androidx.test",
)
maven.artifact(
    testonly = True,
    artifact = "hilt-android-testing",
    group = "com.google.dagger",
)
use_repo(maven, "maven")
