load("@rules_java//java:defs.bzl", "java_binary", "java_plugin")

java_plugin(
    name = "dagger_component_plugin",
    generates_api = 1,
    processor_class = "dagger.internal.codegen.ComponentProcessor",
    visibility = ["//visibility:private"],
    deps = [
        "@dagger_simple_maven//:com_google_dagger_dagger_compiler",
    ],
)

java_library(
    name = "dagger",
    exported_plugins = [":dagger_component_plugin"],
    visibility = ["//visibility:public"],
    exports = [
        "@dagger_simple_maven//:com_google_dagger_dagger",
        "@dagger_simple_maven//:javax_inject_javax_inject",
    ],
)

java_binary(
    name = "coffee",
    main_class = "coffee.CoffeeApp",
    runtime_deps = [
        ":dagger",
        "//src/main/java/coffee",
    ],
)
